Fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,6 @@
 }
 
 .game-element {
-  width: 10%;
   display: flex;
 }
 
